--- a/portfolio-app/public/index.html
+++ b/portfolio-app/public/index.html
@@ -19,7 +19,7 @@
     
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
 
-    <title>Srikalyani</title>
+    <title>Srikalyani Manukonda</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
